fix safari alignments

--- a/assets/sass/_sections.sass
+++ b/assets/sass/_sections.sass
@@ -366,8 +366,7 @@
                 margin-top: space(33)
                 padding-top: space(37)
                 .block-content
-                    padding-right: 0
-                    padding-left: 0
+                    width: 100%
     @include media-breakpoint-up(desktop)
         html:not(.has-menu-opened) &
             #document-header:not(.sticky)
