--- a/assets/sass/_system.sass
+++ b/assets/sass/_system.sass
@@ -304,8 +304,10 @@ main
         @include media-breakpoint-up(desktop)
             .blocks
                 .block-content
-                    padding-left: offset(2)
-                    padding-right: offset(2)
+                    padding-left: 0
+                    width: columns(8)
+                    margin-left: auto
+                    margin-right: auto
                 .block-chapter
                     .block-content
                         padding-right: offset(1)
